fix: Animation on mobile devices and the three line bar alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1122,6 +1122,10 @@ a:hover {
     display: flex;
   }
 
+  .nav-container {
+    padding-left: 0;
+  }
+
   .hero-content {
     flex-direction: column;
     align-items: center;
